Make images not draggable

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="app-container">
       <div class="scene-container">
-        <img src="./background.png"></img>
+        <img draggable="false" src="./background.png"></img>
         <div class="grape-container">
-          <img class="grape-img" src="./grape.png"></img>
+          <img draggable="false" class="grape-img" src="./grape.png"></img>
         </div>
       </div>
     </div>
