--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <div class="app-container">
       <div class="scene-container">
         <img draggable="false" src="./background.png"></img>
-        <div class="grape-container">
+        <div class="grape-container" hidden>
           <img draggable="false" class="grape-img" src="./grape.png"></img>
         </div>
+      </div>
+      <div class="info-container" hidden>
+        <div class="gradient-border info">
+          Here's some info about grapes.
+        </div>
+      </div>
       </div>
     </div>
     <script src="script.js"></script>
