Add support for html content for grapes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <div class="info-modal-top-content">
               <h1>Header</h1>
               <div class="info-modal-text-content">
-                Here's some info about grapes.
+                <div id="first_grape" hidden>
+                  grapes stuff here <img src="./grape.png"></img> more stufff
+                </div>
+                <div id="second_grape" hidden>
+                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
+                </div>
               </div>
             </div>
             <button onClick="closeInfoModal()">← Back</button>
