Add support for alternate grape images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="scene-container">
         <img draggable="false" src="./background.png"></img>
         <div class="grape-container" hidden>
-          <img draggable="false" class="grape-img" src="./grape.png"></img>
+          <img draggable="false" class="grape-img" src="./grapebunch.png"></img>
         </div>
         <dialog id="info-modal">
           <div class="info-modal-content-container">
