--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   grapes stuff here <img src="./grapebunch.png"></img> more stufff
                 </div>
                 <div id="second_grape" hidden>
-                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
+                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grapebunch.png"></img> more stufff
                 </div>
               </div>
             </div>
