changed grape pic

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
               <h1>Header</h1>
               <div class="info-modal-text-content">
                 <div id="first_grape" hidden>
-                  grapes stuff here <img src="./grapebunch.png"></img> more stufff
+                  grapes stuff here <img src="./grape.png"></img> more stufff
                 </div>
                 <div id="second_grape" hidden>
-                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grapebunch.png"></img> more stufff
+                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
+                </div>
+				<div id="third_grape" hidden>
+                  Third grape bunch <img src="./grape.png"></img> more stufff
                 </div>
               </div>
             </div>
