--- a/index.html
+++ b/index.html
@@ -16,20 +16,32 @@
         </div>
         <dialog id="info-modal">
           <div class="info-modal-content-container">
-            <div class="info-modal-top-content">
-              <h1>Header</h1>
               <div class="info-modal-text-content">
-                <div id="first_grape" hidden>
-                  grapes stuff here <img src="./grape.png"></img> more stufff
+                <div id="button" hidden>
+					<h1>Getting Started</h1>
+						Explanation
+                </div>
+				<div id="grape_single" hidden>
+					<h1>Introduction</h1>
+						Explanation
+                </div>
+				<div id="first_grape" hidden>
+					<h1>Overarching Theme: Sexual Identity</h1>
+						3 graps grapes stuff here <img src="./grape.png"></img> more stufff
                 </div>
                 <div id="second_grape" hidden>
-                  mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
+					<h1>Overarching Theme: Racial Identity</h1>
+						4 grapes mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
                 </div>
 				<div id="third_grape" hidden>
-                  Third grape bunch <img src="./grape.png"></img> more stufff
+					<h1>Overarching Theme: Gender Identity</h1>
+						Five grapes grape bunch <img src="./grape.png"></img> more stufff
+                </div>
+				<div id="fourth_grape" hidden>
+					<h1>Identity Deconstruction</h1>
+						1 grapes grape bunch <img src="./grape.png"></img> more stufff
                 </div>
               </div>
-            </div>
             <button onClick="closeInfoModal()">← Back</button>
           </div>
         </dialog>
