--- a/index.html
+++ b/index.html
@@ -23,23 +23,60 @@
                 </div>
 				<div id="grape_single" hidden>
 					<h1>Introduction</h1>
-						Explanation
-                </div>
+						<div id="floatedleft"><img src="./grape1.png"></img></div>
+						<p>Gender Studies 5120, Gender & Nature, has been a very unique experience- which is actually what I was expecting and hoping for. I feel as if I have a grasp on the goals of the course, however I continuously struggle to dig deep. I have never truly connected with any sort of plant. I can appreciate them, admire them, fight for them, but I have never felt as if we could communicate with each other. I never would have considered them admiring me in the same way that I admire them. I have always felt a deeper connection with animals, and I was eager to observe a fauna for my documentary, however, this assignment wouldn’t be fulfilling it’s full potential if I didn’t push myself to connect with something I’ve never attempted to connect with before.
+						</p>
+						<p>I moved into my new apartment in July of 2022. I fell in love with the location because of how close it was to campus, and the surroundings are abundant with various species of wild growing plant life. We live in the basement, so the backyard isn’t really ours, but it still makes me so pleased to see that most of it is beautiful clover, and we get plenty of shade from the surrounding trees. 
+						</p>
+						<p>There are large, green tendrils that clutch our chain link fence, and when I first met them I found them to be annoying as they make it hard to open the fence, and they drape over the other side so that you have to duck to get by. I never realized they were grape vines until the bright green orbs growing on them caught my eye.
+						</p>
+				</div>
 				<div id="first_grape" hidden>
 					<h1>Overarching Theme: Sexual Identity</h1>
-						3 graps grapes stuff here <img src="./grape.png"></img> more stufff
+						<div id="floatedleft"><img src="./grape2(SI).png"></img></div>
+						<p>When I first noticed the grapes I experienced excitement. How cool was it that we had produce growing on our fence? I was eager to pluck them from the vines and try them for myself, but I stopped myself because I was worried that my landlord wouldn’t appreciate that. Even if they were intentionally there, or simply wild, it is her property and not mine to take from. But it didn’t cross my mind, until I started my documentary, to consider what the grapes would have wanted.
+						</p>
+						<div id="floatedright"><img src="./grape3(SI).png"></img></div>
+						<p>I imagine the grapes' perspective: <em>I am desired, I am wanted by someone. This person has the power to take me, and I don’t have the power to stop them, but they stop themselves because they fear another person who they believe has power over me.</em>
+						</p>
+						<div id="floatedleft"><img src="./grape4(SI).png"></img></div>
+						<p>You may already be drawing some obvious connections to this experience and how our society has viewed and treated women, especially in older generations when women were usually handed over for marriage by their fathers. We may still see this today in the outdated tradition of “getting permission” from a woman's father before proposing, however it also shows up in more subtle ways, like when people refer to their partners as “theirs”. This isn’t necessarily problematic on its own, however it can normalize possessive behavior, which is especially harmful in the context of stereotypical masculine/feminine roles in relationships- as well as in viewing femininity from a masculine perspective in general.
+						</p>
+						<p>I am disappointed that I have perpetuated these masculine stereotypes by having a possessive, and entitled, mindset. I wanted to anthropomorphize these grapes to better understand them, but from the beginning I had attached a sort of feminine label to them because of their beauty and appeal, but doing so helped me to recognize my own toxic conceptions and stereotypes of femininity. I’m grateful for this learning experience, and I plan to correct my masculine presumptions of femininity as they arise.
+						</p>
                 </div>
                 <div id="second_grape" hidden>
 					<h1>Overarching Theme: Racial Identity</h1>
-						4 grapes mormoer mas;drk ma;sldkf grapes stuff here <img src="./grape.png"></img> more stufff
+						<div id="floatedleft"><img src="./grape5(RI).png"></img></div>
+						<p>In these images, the leaves seem to pop out more than the grapes themselves, so I’ve decided to include them in my documentation. Grape leaves can be used in a number of dishes, the most notable generally originating in the Middle East. Many different cultures use grape leaves to compliment their culinary endeavors, however research has also supported medicinal uses as well. [1]
+						</p>
+						<div id="floatedright"><img src="./grape6(RI).png"></img></div>
+						<p>So, why is it that we first ask the uses of a plant when we discover them? There are many ways to look at this question… First off, maybe a plant's use isn’t the question that you first jump to, and the reason I did may be part of my own culture. One with a colonizer mindset would probably always first consider the uses of a thing (i.e. plants, animals, land), whereas another culture may still view these things as useful, but not in a way that involves them being used. The key difference is how both view their relationship with these subjects, because these views influence their interactions. Someone who has gratitude with nature will recognize the benefits from nature, and they will practice reciprocity to give back. A colonizer may recognize the benefits from nature and choose to maintain it with the intention that they will receive more- they view nature as an investment rather than a gift.
+						</p>
+						<p>There is nothing wrong with learning the functions of nature, but it’s important that I don’t overlook any selfishness and/or entitlement that may develop, or has already existed, from my colonizer upbringing. I plan on viewing nature as a mutual relationship rather than just a resource.
+						</p>
+						<div id="floatedleft"><img src="./grape7(RI).png"></img></div><img src="./grape8(RI).png"></img>
+						<p>[1] Lacerda, D. S., Costa, P. C., Funchal, C., & Gomez, C. D. R. (2016, October 19). Benefits of vine leaf on different biological systems. IntechOpen. Retrieved October 2, 2022, from https://www.intechopen.com/chapters/52147 
+						</p>
                 </div>
 				<div id="third_grape" hidden>
 					<h1>Overarching Theme: Gender Identity</h1>
-						Five grapes grape bunch <img src="./grape.png"></img> more stufff
+						<p>I caught these pictures in the early morning. When I look at these images they appear cold to me, but for each of these days the air was warm; perhaps I have a strong association with the cold and morning light.
+						</p><div id="floatedright"><img src="./grape9(GI).png"></img></div>
+						<p>I often categorize things by colors and/or temperature depending on the associations I have with it. Some are obvious, like my childhood home is warm and a soft gold color, because homes are usually warm and comforting, and gold happens to be a favored color of mine. Warm things are not always positive, just as cold things aren’t always negative. The morning may be cold to me, even when it physically isn’t, but I have a fondness when it comes to seeing the morning light split into rays as it rises behind our mountain peaks. 
+						</p><div id="floatedleft"><img src="./grape10(GI).png"></img></div>
+						<p>Throughout history, communities and cultures have developed their own associations with grapes. In some areas, grapes are considered a delicacy, likely because there are high costs associated with transporting fresh grapes since they perish quite fast. In other areas, specifically areas in which grapes are truly native, they grow rampant in the climate they are used to, so they are considered common, but the wine they make becomes a staple in many of their native countries. The Greek god Dionysus is credited for being the first to create wine through the cultivation of grapes, and he’s had many labels attached to him because of this. He is regarded as a god of fertility, ecstasy, joy, and dance, however he has also been associated with debauchery, corruption, and bad luck for the same reasons. It’s interesting what type of symbolism grapes have depending on the perspective that views them.
+						</p>
+						<p>Just as wine may symbolize openness and fun, or alternatively, irresponsibility and “immodesty” (depending on who you ask), queerness comes with its own symbolism. Queerness, in relation to the LGBTQ+ community, may symbolize freedom, truth, and genuinity for those who identify with it, whereas it may be seen as entirely opposite by someone who struggles to understand the community.
+						</p><div id="floatedleft"><img src="./grape11(GI).png"></img></div>
+						<div id="floatedright"><img src="./grape12(GI).png"></img></div>
+						<p>Being in the LGBTQ+ community means my labels may hold weight depending on the perspectives that are viewing them. They mean something to me, but I can’t help it if they spark an entirely different message in someone else- the only thing I can offer is my perspective. There are times when others may hold the same labels as me but don’t quite fit the definition that I’ve set upon that label, or they may fit the definition of my label but choose to identify outside of my group, but I can’t help that the vines of their identity have delicately intertwined with their nature and unique experiences in a way that grows separately from mine.
+						</p>
+						<div id="floatedleft"><img src="./grape13(GI).png"></img></div>
                 </div>
 				<div id="fourth_grape" hidden>
 					<h1>Identity Deconstruction</h1>
-						1 grapes grape bunch <img src="./grape.png"></img> more stufff
+						<div id="floatedright"><img src="./grape14(ID).png"></img></div>
                 </div>
               </div>
             <button onClick="closeInfoModal()">← Back</button>
