--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
               <div class="info-modal-text-content">
                 <div id="button" hidden>
 					<h1>Getting Started</h1>
-						Explanation
+						<div id="spacing"><p>Thank you for taking a look at my Nature Documentary project!
+						</p>
+						<p>After 14 consecutive days of documenting my subject, I've compiled together some overarching themes that I've encountered from my observations. Each grape represents one day of documentation and observation, but some are bunched together if they share a theme.
+						</p>
+						<p>To start, click on the first grape near the top, then work your way down the vine. :)
+						</p>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<p>The content, photography, and overall design of this project was done by Evan Miller. The main coding efforts of this website are credited towards Parker Miller. (Thank you Parker!)
+						</p>
+						</div>
                 </div>
 				<div id="grape_single" hidden>
 					<h1>Introduction</h1>
@@ -76,7 +91,13 @@
                 </div>
 				<div id="fourth_grape" hidden>
 					<h1>Identity Deconstruction</h1>
-						<div id="floatedright"><img src="./grape14(ID).png"></img></div>
+						<p>“The most important clue to identify the grape variety is the leaf,” according to Per Karlsson, an author of BKWineMagazine. I was surprised to find out that there are many things that a professional “grape leaf identifier” will look at to determine the grape variety, including, but certainly not limited to, the size, shape, color, and texture of the leaf. They also take a look at the pattern and distribution of the nerves, which may have extremely subtle differences between various leaf types. Overall, identifying what grapes you’re looking at feels nearly impossible as an amateur, and I feel like the same can be said for anyone that is exploring new, unfamiliar parts of their identity.
+						</p>
+						<p>There’s a lot of pressure that comes with identity exploration. At certain points in your life you’re expected to be comfortable and self-assured with various aspects of your identity, even though everyone’s journey is so different and exploration may come a lot easier to some than it does to others.
+						</p>
+						<p>Understanding ourselves is a crucial part of our existence, however there seems to be so much baggage that comes from attaching labels to ourselves. When we adopt labels it becomes easier to find and connect with others with the same label, however it’s important to remember that the ways in which we experience these shared identities are unique to us. These communities, while comforting, also make it easier to other those outside of it, and then we start to forget all of the similarities we have with everyone around us. I believe it helps me to strengthen my connection with other people and nature when I consider us all existing as a single, natural organism. Sometimes, we need to deconstruct our identities to see the full picture.
+						</p>
+						<div id="lastpic"><img src="./grape14(ID).png"></img></div>
                 </div>
               </div>
             <button onClick="closeInfoModal()">← Back</button>
