--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="info-modal-text-content">
                 <div id="button" hidden>
 					<h1>Getting Started</h1>
-						<div id="spacing"><p>Thank you for taking a look at my Nature Documentary project!
+						<p>Thank you for taking a look at my Nature Documentary project!
 						</p>
 						<p>After 14 consecutive days of documenting my subject, I've compiled together some overarching themes that I've encountered from my observations. Each grape represents one day of documentation and observation, but some are bunched together if they share a theme.
 						</p>
@@ -34,7 +34,7 @@
 						<br>
 						<p>The content, photography, and overall design of this project was done by Evan Miller. The main coding efforts of this website are credited towards Parker Miller. (Thank you Parker!)
 						</p>
-						</div>
+					
                 </div>
 				<div id="grape_single" hidden>
 					<h1>Introduction</h1>
@@ -71,7 +71,7 @@
 						<p>There is nothing wrong with learning the functions of nature, but it’s important that I don’t overlook any selfishness and/or entitlement that may develop, or has already existed, from my colonizer upbringing. I plan on viewing nature as a mutual relationship rather than just a resource.
 						</p>
 						<div id="floatedleft"><img src="./grape7(RI).png"></img></div><img src="./grape8(RI).png"></img>
-						<p>[1] Lacerda, D. S., Costa, P. C., Funchal, C., & Gomez, C. D. R. (2016, October 19). Benefits of vine leaf on different biological systems. IntechOpen. Retrieved October 2, 2022, from https://www.intechopen.com/chapters/52147 
+						<p>[1] Lacerda, D. S., Costa, P. C., Funchal, C., & Gomez, C. D. R. (2016, October 19). Benefits of vine leaf on different biological systems. IntechOpen. Retrieved September 25, 2022, from https://www.intechopen.com/chapters/52147 
 						</p>
                 </div>
 				<div id="third_grape" hidden>
@@ -80,24 +80,32 @@
 						</p><div id="floatedright"><img src="./grape9(GI).png"></img></div>
 						<p>I often categorize things by colors and/or temperature depending on the associations I have with it. Some are obvious, like my childhood home is warm and a soft gold color, because homes are usually warm and comforting, and gold happens to be a favored color of mine. Warm things are not always positive, just as cold things aren’t always negative. The morning may be cold to me, even when it physically isn’t, but I have a fondness when it comes to seeing the morning light split into rays as it rises behind our mountain peaks. 
 						</p><div id="floatedleft"><img src="./grape10(GI).png"></img></div>
-						<p>Throughout history, communities and cultures have developed their own associations with grapes. In some areas, grapes are considered a delicacy, likely because there are high costs associated with transporting fresh grapes since they perish quite fast. In other areas, specifically areas in which grapes are truly native, they grow rampant in the climate they are used to, so they are considered common, but the wine they make becomes a staple in many of their native countries. The Greek god Dionysus is credited for being the first to create wine through the cultivation of grapes, and he’s had many labels attached to him because of this. He is regarded as a god of fertility, ecstasy, joy, and dance, however he has also been associated with debauchery, corruption, and bad luck for the same reasons. It’s interesting what type of symbolism grapes have depending on the perspective that views them.
+						<p>Throughout history, communities and cultures have developed their own associations with grapes. In some areas, grapes are considered a delicacy, likely because there are high costs associated with transporting fresh grapes since they perish quite fast. In other areas, specifically areas in which grapes are truly native, they grow rampant in the climate they are used to, so they are considered common, but the wine they make becomes a staple in many of their native countries. The Greek god Dionysus is credited for being the first to create wine through the cultivation of grapes, and he’s had many labels attached to him because of this. He is regarded as a god of fertility, ecstasy, joy, and dance, however he has also been associated with debauchery, corruption, and bad luck for the same reasons. [2] It’s interesting what type of symbolism grapes have depending on the perspective that views them.
 						</p>
 						<p>Just as wine may symbolize openness and fun, or alternatively, irresponsibility and “immodesty” (depending on who you ask), queerness comes with its own symbolism. Queerness, in relation to the LGBTQ+ community, may symbolize freedom, truth, and genuinity for those who identify with it, whereas it may be seen as entirely opposite by someone who struggles to understand the community.
 						</p><div id="floatedleft"><img src="./grape11(GI).png"></img></div>
 						<div id="floatedright"><img src="./grape12(GI).png"></img></div>
 						<p>Being in the LGBTQ+ community means my labels may hold weight depending on the perspectives that are viewing them. They mean something to me, but I can’t help it if they spark an entirely different message in someone else- the only thing I can offer is my perspective. There are times when others may hold the same labels as me but don’t quite fit the definition that I’ve set upon that label, or they may fit the definition of my label but choose to identify outside of my group, but I can’t help that the vines of their identity have delicately intertwined with their nature and unique experiences in a way that grows separately from mine.
 						</p>
-						<div id="floatedleft"><img src="./grape13(GI).png"></img></div>
+						<div id="grape13"><img src="./grape13(GI).png"></img></div>
+						<br>
+						<br>
+						<p>[2] Dionysus • Greek god of wine, pleasure & festivity - facts & info. Greek Gods & Goddesses. (2022, June 30). Retrieved September 26, 2022, from https://greekgodsandgoddesses.net/gods/dionysus/ 
+						</p>
                 </div>
 				<div id="fourth_grape" hidden>
 					<h1>Identity Deconstruction</h1>
-						<p>“The most important clue to identify the grape variety is the leaf,” according to Per Karlsson, an author of BKWineMagazine. I was surprised to find out that there are many things that a professional “grape leaf identifier” will look at to determine the grape variety, including, but certainly not limited to, the size, shape, color, and texture of the leaf. They also take a look at the pattern and distribution of the nerves, which may have extremely subtle differences between various leaf types. Overall, identifying what grapes you’re looking at feels nearly impossible as an amateur, and I feel like the same can be said for anyone that is exploring new, unfamiliar parts of their identity.
+						<p>“The most important clue to identify the grape variety is the leaf,” according to Per Karlsson, an author of BKWineMagazine. I was surprised to find out that there are many things that a professional “grape leaf identifier” will look at to determine the grape variety, including, but certainly not limited to, the size, shape, color, and texture of the leaf. They also take a look at the pattern and distribution of the nerves, which may have extremely subtle differences between various leaf types. [3] Overall, identifying what grapes you’re looking at feels nearly impossible as an amateur, and I feel like the same can be said for anyone that is exploring new, unfamiliar parts of their identity.
 						</p>
 						<p>There’s a lot of pressure that comes with identity exploration. At certain points in your life you’re expected to be comfortable and self-assured with various aspects of your identity, even though everyone’s journey is so different and exploration may come a lot easier to some than it does to others.
 						</p>
 						<p>Understanding ourselves is a crucial part of our existence, however there seems to be so much baggage that comes from attaching labels to ourselves. When we adopt labels it becomes easier to find and connect with others with the same label, however it’s important to remember that the ways in which we experience these shared identities are unique to us. These communities, while comforting, also make it easier to other those outside of it, and then we start to forget all of the similarities we have with everyone around us. I believe it helps me to strengthen my connection with other people and nature when I consider us all existing as a single, natural organism. Sometimes, we need to deconstruct our identities to see the full picture.
 						</p>
 						<div id="lastpic"><img src="./grape14(ID).png"></img></div>
+						<br>
+						<br>
+						<p>[3] Karlsson, A. P. (2021, May 27). Learn how to identify a grape variety by the leaf and grape bunch: Bkwine magazine |. BKWine Magazine. Retrieved September 26, 2022, from https://www.bkwine.com/features/winemaking-viticulture/learn-how-to-identify-a-grape-variety-by-the-leaf-and-grape-bunch/#:~:text=These%20days%20the%20most%20reliable,test%20kit%20in%20the%20vineyards.
+						</p>
                 </div>
               </div>
             <button onClick="closeInfoModal()">← Back</button>
