--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 				<div id="grape_single" hidden>
 					<h1>Introduction</h1>
-						<div id="floatedleft"><img src="./grape1.png"></img></div>
+						<div id="floatedleft"><img src="./Grape1.PNG"></img></div>
 						<p>Gender Studies 5120, Gender & Nature, has been a very unique experience- which is actually what I was expecting and hoping for. I feel as if I have a grasp on the goals of the course, however I continuously struggle to dig deep. I have never truly connected with any sort of plant. I can appreciate them, admire them, fight for them, but I have never felt as if we could communicate with each other. I never would have considered them admiring me in the same way that I admire them. I have always felt a deeper connection with animals, and I was eager to observe a fauna for my documentary, however, this assignment wouldn’t be fulfilling it’s full potential if I didn’t push myself to connect with something I’ve never attempted to connect with before.
 						</p>
 						<p>I moved into my new apartment in July of 2022. I fell in love with the location because of how close it was to campus, and the surroundings are abundant with various species of wild growing plant life. We live in the basement, so the backyard isn’t really ours, but it still makes me so pleased to see that most of it is beautiful clover, and we get plenty of shade from the surrounding trees. 
@@ -48,13 +48,13 @@
 				</div>
 				<div id="first_grape" hidden>
 					<h1>Overarching Theme: Sexual Identity</h1>
-						<div id="floatedleft"><img src="./grape2(SI).png"></img></div>
+						<div id="floatedleft"><img src="./Grape2(SI).PNG"></img></div>
 						<p>When I first noticed the grapes I experienced excitement. How cool was it that we had produce growing on our fence? I was eager to pluck them from the vines and try them for myself, but I stopped myself because I was worried that my landlord wouldn’t appreciate that. Even if they were intentionally there, or simply wild, it is her property and not mine to take from. But it didn’t cross my mind, until I started my documentary, to consider what the grapes would have wanted.
 						</p>
-						<div id="floatedright"><img src="./grape3(SI).png"></img></div>
+						<div id="floatedright"><img src="./Grape3(SI).PNG"></img></div>
 						<p>I imagine the grapes' perspective: <em>I am desired, I am wanted by someone. This person has the power to take me, and I don’t have the power to stop them, but they stop themselves because they fear another person who they believe has power over me.</em>
 						</p>
-						<div id="floatedleft"><img src="./grape4(SI).png"></img></div>
+						<div id="floatedleft"><img src="./Grape4(SI).PNG"></img></div>
 						<p>You may already be drawing some obvious connections to this experience and how our society has viewed and treated women, especially in older generations when women were usually handed over for marriage by their fathers. We may still see this today in the outdated tradition of “getting permission” from a woman's father before proposing, however it also shows up in more subtle ways, like when people refer to their partners as “theirs”. This isn’t necessarily problematic on its own, however it can normalize possessive behavior, which is especially harmful in the context of stereotypical masculine/feminine roles in relationships- as well as in viewing femininity from a masculine perspective in general.
 						</p>
 						<p>I am disappointed that I have perpetuated these masculine stereotypes by having a possessive, and entitled, mindset. I wanted to anthropomorphize these grapes to better understand them, but from the beginning I had attached a sort of feminine label to them because of their beauty and appeal, but doing so helped me to recognize my own toxic conceptions and stereotypes of femininity. I’m grateful for this learning experience, and I plan to correct my masculine presumptions of femininity as they arise.
