--- a/index.html
+++ b/index.html
@@ -62,32 +62,32 @@
                 </div>
                 <div id="second_grape" hidden>
 					<h1>Overarching Theme: Racial Identity</h1>
-						<div id="floatedleft"><img src="./grape5(RI).png"></img></div>
+						<div id="floatedleft"><img src="./Grape5(RI).PNG"></img></div>
 						<p>In these images, the leaves seem to pop out more than the grapes themselves, so I’ve decided to include them in my documentation. Grape leaves can be used in a number of dishes, the most notable generally originating in the Middle East. Many different cultures use grape leaves to compliment their culinary endeavors, however research has also supported medicinal uses as well. [1]
 						</p>
-						<div id="floatedright"><img src="./grape6(RI).png"></img></div>
+						<div id="floatedright"><img src="./Grape6(RI).PNG"></img></div>
 						<p>So, why is it that we first ask the uses of a plant when we discover them? There are many ways to look at this question… First off, maybe a plant's use isn’t the question that you first jump to, and the reason I did may be part of my own culture. One with a colonizer mindset would probably always first consider the uses of a thing (i.e. plants, animals, land), whereas another culture may still view these things as useful, but not in a way that involves them being used. The key difference is how both view their relationship with these subjects, because these views influence their interactions. Someone who has gratitude with nature will recognize the benefits from nature, and they will practice reciprocity to give back. A colonizer may recognize the benefits from nature and choose to maintain it with the intention that they will receive more- they view nature as an investment rather than a gift.
 						</p>
 						<p>There is nothing wrong with learning the functions of nature, but it’s important that I don’t overlook any selfishness and/or entitlement that may develop, or has already existed, from my colonizer upbringing. I plan on viewing nature as a mutual relationship rather than just a resource.
 						</p>
-						<div id="floatedleft"><img src="./grape7(RI).png"></img></div><img src="./grape8(RI).png"></img>
+						<div id="floatedleft"><img src="./Grape7(RI).PNG"></img></div><img src="./grape8(RI).png"></img>
 						<p>[1] Lacerda, D. S., Costa, P. C., Funchal, C., & Gomez, C. D. R. (2016, October 19). Benefits of vine leaf on different biological systems. IntechOpen. Retrieved September 25, 2022, from https://www.intechopen.com/chapters/52147 
 						</p>
                 </div>
 				<div id="third_grape" hidden>
 					<h1>Overarching Theme: Gender Identity</h1>
 						<p>I caught these pictures in the early morning. When I look at these images they appear cold to me, but for each of these days the air was warm; perhaps I have a strong association with the cold and morning light.
-						</p><div id="floatedright"><img src="./grape9(GI).png"></img></div>
+						</p><div id="floatedright"><img src="./Grape9(GI).PNG"></img></div>
 						<p>I often categorize things by colors and/or temperature depending on the associations I have with it. Some are obvious, like my childhood home is warm and a soft gold color, because homes are usually warm and comforting, and gold happens to be a favored color of mine. Warm things are not always positive, just as cold things aren’t always negative. The morning may be cold to me, even when it physically isn’t, but I have a fondness when it comes to seeing the morning light split into rays as it rises behind our mountain peaks. 
-						</p><div id="floatedleft"><img src="./grape10(GI).png"></img></div>
+						</p><div id="floatedleft"><img src="./Grape10(GI).PNG"></img></div>
 						<p>Throughout history, communities and cultures have developed their own associations with grapes. In some areas, grapes are considered a delicacy, likely because there are high costs associated with transporting fresh grapes since they perish quite fast. In other areas, specifically areas in which grapes are truly native, they grow rampant in the climate they are used to, so they are considered common, but the wine they make becomes a staple in many of their native countries. The Greek god Dionysus is credited for being the first to create wine through the cultivation of grapes, and he’s had many labels attached to him because of this. He is regarded as a god of fertility, ecstasy, joy, and dance, however he has also been associated with debauchery, corruption, and bad luck for the same reasons. [2] It’s interesting what type of symbolism grapes have depending on the perspective that views them.
 						</p>
 						<p>Just as wine may symbolize openness and fun, or alternatively, irresponsibility and “immodesty” (depending on who you ask), queerness comes with its own symbolism. Queerness, in relation to the LGBTQ+ community, may symbolize freedom, truth, and genuinity for those who identify with it, whereas it may be seen as entirely opposite by someone who struggles to understand the community.
-						</p><div id="floatedleft"><img src="./grape11(GI).png"></img></div>
-						<div id="floatedright"><img src="./grape12(GI).png"></img></div>
+						</p><div id="floatedleft"><img src="./Grape11(GI).PNG"></img></div>
+						<div id="floatedright"><img src="./Grape12(GI).PNG"></img></div>
 						<p>Being in the LGBTQ+ community means my labels may hold weight depending on the perspectives that are viewing them. They mean something to me, but I can’t help it if they spark an entirely different message in someone else- the only thing I can offer is my perspective. There are times when others may hold the same labels as me but don’t quite fit the definition that I’ve set upon that label, or they may fit the definition of my label but choose to identify outside of my group, but I can’t help that the vines of their identity have delicately intertwined with their nature and unique experiences in a way that grows separately from mine.
 						</p>
-						<div id="grape13"><img src="./grape13(GI).png"></img></div>
+						<div id="grape13"><img src="./Grape13(GI).PNG"></img></div>
 						<br>
 						<br>
 						<p>[2] Dionysus • Greek god of wine, pleasure & festivity - facts & info. Greek Gods & Goddesses. (2022, June 30). Retrieved September 26, 2022, from https://greekgodsandgoddesses.net/gods/dionysus/ 
@@ -101,7 +101,7 @@
 						</p>
 						<p>Understanding ourselves is a crucial part of our existence, however there seems to be so much baggage that comes from attaching labels to ourselves. When we adopt labels it becomes easier to find and connect with others with the same label, however it’s important to remember that the ways in which we experience these shared identities are unique to us. These communities, while comforting, also make it easier to other those outside of it, and then we start to forget all of the similarities we have with everyone around us. I believe it helps me to strengthen my connection with other people and nature when I consider us all existing as a single, natural organism. Sometimes, we need to deconstruct our identities to see the full picture.
 						</p>
-						<div id="lastpic"><img src="./grape14(ID).png"></img></div>
+						<div id="lastpic"><img src="./Grape14(ID).PNG"></img></div>
 						<br>
 						<br>
 						<p>[3] Karlsson, A. P. (2021, May 27). Learn how to identify a grape variety by the leaf and grape bunch: Bkwine magazine |. BKWine Magazine. Retrieved September 26, 2022, from https://www.bkwine.com/features/winemaking-viticulture/learn-how-to-identify-a-grape-variety-by-the-leaf-and-grape-bunch/#:~:text=These%20days%20the%20most%20reliable,test%20kit%20in%20the%20vineyards.
