--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</p>
 						<p>There is nothing wrong with learning the functions of nature, but it’s important that I don’t overlook any selfishness and/or entitlement that may develop, or has already existed, from my colonizer upbringing. I plan on viewing nature as a mutual relationship rather than just a resource.
 						</p>
-						<div id="floatedleft"><img src="./Grape7(RI).PNG"></img></div><img src="./grape8(RI).png"></img>
+						<div id="floatedleft"><img src="./Grape7(RI).PNG"></img></div><img src="./Grape8(RI).PNG"></img>
 						<p>[1] Lacerda, D. S., Costa, P. C., Funchal, C., & Gomez, C. D. R. (2016, October 19). Benefits of vine leaf on different biological systems. IntechOpen. Retrieved September 25, 2022, from https://www.intechopen.com/chapters/52147 
 						</p>
                 </div>
